# jarvis-planejador-financeiro

./: .env  .gitignore  LICENSE  Projeto.md  README.md  bot.py  clear_database.py  config.py  jarvis.db  llm_client.py  output_tools.txt  populate_test_cases.py  pyproject.toml  requirements.txt  test_tools.py
agents/: __init__.py  base_agent.py  finance_agent.py  output_agent.py  partner_agent.py  router_agent.py  setup_agent.py
database/: __init__.py  models.py
graph/: __init__.py  state.py  workflow.py
notebooks/: db_check.ipynb  jarvis.db
tools/: README.md  __init__.py  calculator_tool.py  filter_tool.py  formatter_tool.py  plot_tool.py  sql_tool.py
