[project]
name = "jarvis-planejador-financeiro"
version = "0.1.0"
description = "Assistente financeiro conversacional (Jarvis) com bot Telegram e LLM Gemini."
authors = [{ name = "Eduardo Siqueira Bonfim" }]
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==20.7",
    "python-dotenv==1.0.0",
    "google-generativeai==0.3.2",
]


